--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "18.2.0",
     "react-player": "^2.10.1"
   },
