--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -21,11 +21,14 @@
     "react": "18.2.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "18.2.0",
-    "react-player": "^2.10.1"
+    "react-player": "^2.10.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^18.6.5",
     "@types/react": "^18.0.17",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.0.1",
